--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,18 +1,49 @@
 ---
-import CallToAction from './CallToAction.astro'
-
+import { DarkMode } from 'accessible-astro-components'
 const currentYear = new Date().getFullYear()
 ---
 
 <footer>
-  <CallToAction />
   <section class="py-8">
     <div class="container">
-      <p>
-        &copy; {currentYear} - Starter Theme for <a href="https://astro.build/">Astro</a>. Made with ❤️ by <a
-          href="https://github.com/markteekman">Mark Teekman</a
-        >.
+      <p class="flex items-center gap-2">
+        <DarkMode />
+        &copy; {currentYear} - Made by <a href="https://github.com/urimarti2610">urimarti</a>
       </p>
     </div>
   </section>
 </footer>
+
+
+<style lang="scss" is:global>
+  @use '../assets/scss/base/outline' as *;
+
+  .darkmode-toggle {
+    padding: 0;
+    border: none;
+
+    svg {
+      width: 30px;
+      margin-top: 4px;
+    }
+
+    svg path {
+      fill: var(--action-color);
+    }
+
+    &:hover {
+      svg path {
+        fill: var(--action-color-state);
+      }
+    }
+
+    &:focus {
+      @include outline;
+
+      &:not(:focus-visible) {
+        outline: none;
+        box-shadow: none;
+      }
+    }
+  }
+</style>
