--- a/src/components/Mood.astro
+++ b/src/components/Mood.astro
@@ -1,13 +1,18 @@
 ---
-import { Icon } from 'astro-icon/components'
-
-const { icon = 'mdi:rocket', title = 'Title' } = Astro.props
+const {
+  mood = 'Mood Name',
+  link = '/mood',
+} = Astro.props
 ---
 
-<div class="feature flex flex-col gap-4">
-  <Icon name={icon} />
+<div class="mood flex flex-col gap-4">
   <div class="content">
-    <h3>{title}</h3>
+    <h3>
+      <a href=`/mood/${link}` title=`Find movies for ${mood}`>
+        {mood}
+      </a>
+    </h3>
+
     <p>
       <slot>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, corporis.</slot>
     </p>
@@ -17,7 +22,7 @@ const { icon = 'mdi:rocket', title = 'Title' } = Astro.props
 <style lang="scss">
   @use '../assets/scss/base/breakpoint' as *;
 
-  .feature {
+  .mood {
     position: relative;
     width: calc(100% - 0.5rem);
     padding: 2rem;
@@ -54,13 +59,13 @@ const { icon = 'mdi:rocket', title = 'Title' } = Astro.props
     }
   }
 
-  :global(.feature [data-icon]) {
+  :global(.mood [data-icon]) {
     height: auto;
     width: 4rem;
     color: var(--action-color);
   }
 
-  :global(.darkmode .feature::before) {
+  :global(.darkmode .mood::before) {
     background-color: var(--dark-100);
     box-shadow: 0 0 0 6px var(--dark-100);
   }
