--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -33,7 +33,7 @@ const {
     />
   </head>
   <body>
-    <main id="main-content" transition:animate="fade">
+    <main id="main-content relative" transition:animate="fade">
       <slot />
     </main>
     <Footer />
