--- a/src/pages/mood/[mood].astro
+++ b/src/pages/mood/[mood].astro
@@ -53,17 +53,14 @@ movie.genres = genres.filter((genre) => mood.genres.includes(genre.id))
   </div>
   <section class="my-12">
     <div class="container">
-      <h1>{mood.name}</h1><br />
+      <h1>{mood.name}</h1>
       <h2>{mood.description}</h2>
-    </div>
-  </section>
-   
 
-  <section class="my-12">
-    <div class="container">
       <Movie movie={movie} />
+
     </div>
   </section>
+  
 
 </DefaultLayout>
 
