--- a/src/components/Movie.astro
+++ b/src/components/Movie.astro
@@ -9,6 +9,7 @@ const { movie } = Astro.props
 <section class=`my-12`>
   <div class="container">
     <div class="grid grid-cols-1 gap-24 md:grid-cols-2">
+      <Media class="img-bg" src=`https://image.tmdb.org/t/p/w500${movie.backdrop_path}` />
       <Media class="rounded-lg" src=`https://image.tmdb.org/t/p/w500${movie.poster_path}` />
       <div class="space-content flex flex-col justify-center">
         <h3>{movie.title}</h3>
@@ -26,3 +27,16 @@ const { movie } = Astro.props
     </div>
   </div>
 </section>
+
+<style lang="scss" is:global>
+  .img-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -1;
+    opacity: 0.2;
+    filter: blur(5px)
+  }
+</style>
