feat: Add "Get another movie" button to Movie component

--- a/src/components/Movie.astro
+++ b/src/components/Movie.astro
@@ -23,6 +23,8 @@ const { movie } = Astro.props
         </p>
 
         <WhereToWatch movie={movie} />
+        <button onclick=`window.location.reload()`>Get another movie</button>
+
       </div>
     </div>
   </div>
